src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dwU-dhF500-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\ndefault column width: U\ndefault window height: F500\ntabbed"
expression: snapshot
---
initial configure:
size: 0 × 500, bounds: 1239 × 688, states: []

post-map configures:
size: 1 × 500, bounds: 1239 × 688, states: [Activated]
