src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dwU-dhP0.5-b-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\ndefault column width: U\ndefault window height: P0.5\nborder on\nwant fullscreen: AU\ntabbed"
expression: snapshot
---
initial configure:
size: 0 × 328, bounds: 1231 × 680, states: []

post-map configures:
size: 0 × 328, bounds: 1231 × 680, states: []
size: 1 × 328, bounds: 1231 × 680, states: [Activated]
